hotfix-careerspage-overflow-fixed

--- a/src/Pages/Career/Career.module.css
+++ b/src/Pages/Career/Career.module.css
@@ -28,7 +28,7 @@
 }
 
 .fsillustration {
-  height: 50vh;
+  width: 30rem;
 }
 
 .second__section {
